Общее оформление + page

--- a/index.html
+++ b/index.html
@@ -63,17 +63,24 @@
       <!-- page -->
       <section class="lib-block">
         <h2 class="lib-block__title">Страница</h2>
-        <p class="lib-block__description"><code>html</code> задаем класс <code>.page</code> и на него записываем глобальные стили страницы.</p>
+        <p class="lib-block__description"><code>&lt;html&gt;</code> задаем класс <code>.page</code> и на него записываем глобальные стили страницы.</p>
         <ul class="lib-block__list">
-          <li class="lib-block__list-item"></li>
-          <li class="lib-block__list-item"></li>
-          <li class="lib-block__list-item"></li>
+          <li class="lib-block__list-item">Нормализация вьюпорта для windows-телефонов.</li>
+          <li class="lib-block__list-item"><code>box-sizing: border-box;</code></li>
+          <li class="lib-block__list-item">Фиксированный скроллбар.</li>
+          <li class="lib-block__list-item">Убираем подсветку ссылок и JS-элементов в WebKit на мобильных платформах.</li>
+          <li class="lib-block__list-item">Задаем правильное масштабирование текста для IE на мобильных устройствах.</li>
+          <li class="lib-block__list-item">Сброс отступов.</li>
+          <li class="lib-block__list-item">Стили для <code>&lt;img&gt;</code>.</li>
+          <li class="lib-block__list-item">Запрет масштабирования по двойному клику на сенсорных экранах.</li>
+          <li class="lib-block__list-item">Стили для IE.</li>
         </ul>
       </section>
 
       <!-- Текстовые блоки -->
       <section class="lib-block">
         <h2 class="lib-block__title">Текстовые блоки</h2>
+        <p class="lib-block__name">.post</p>
         <p class="lib-block__description">С помощью <code>flexbox</code> можно регулировать высоту блоков с текстом и расстояние между отдельными фрагментами внутри.</p>
 
         <!-- post -->
