--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
       <!-- Слайдеры -->
       <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
+        <h2 class="lib-block__title">Слайдеры</h2>
         <h3 class="lib-block__paragraph">Пункт</h3>
         <p class="lib-block__name">.класс</p>
         <p class="lib-block__description">Описание</p>
@@ -456,9 +456,9 @@
       </section>
 
 
-      <!-- Форма и поля -->
+      <!-- Формы и поля -->
       <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
+        <h2 class="lib-block__title">Формы и поля</h2>
         <h3 class="lib-block__paragraph">Пункт</h3>
         <p class="lib-block__name">.класс</p>
         <p class="lib-block__description">Описание</p>
@@ -473,60 +473,9 @@
       </section>
 
 
-      <!-- Переключатели (радио-кнопки, флажки и др.) -->
+      <!-- Переключатели (радио-кнопки, флажки, селект и др.) -->
       <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
-        <h3 class="lib-block__paragraph">Пункт</h3>
-        <p class="lib-block__name">.класс</p>
-        <p class="lib-block__description">Описание</p>
-        <button class="lib-block__spoiler" type="button">Пример</button>
-
-        <!-- класс -->
-        <div class="lib-block__example  lib-block__example--closed">
-          <div class=".класс">
-
-          </div>
-        </div>
-      </section>
-
-
-      <!-- Загрузка файла -->
-      <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
-        <h3 class="lib-block__paragraph">Пункт</h3>
-        <p class="lib-block__name">.класс</p>
-        <p class="lib-block__description">Описание</p>
-        <button class="lib-block__spoiler" type="button">Пример</button>
-
-        <!-- класс -->
-        <div class="lib-block__example  lib-block__example--closed">
-          <div class=".класс">
-
-          </div>
-        </div>
-      </section>
-
-
-      <!-- Range -->
-      <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
-        <h3 class="lib-block__paragraph">Пункт</h3>
-        <p class="lib-block__name">.класс</p>
-        <p class="lib-block__description">Описание</p>
-        <button class="lib-block__spoiler" type="button">Пример</button>
-
-        <!-- класс -->
-        <div class="lib-block__example  lib-block__example--closed">
-          <div class=".класс">
-
-          </div>
-        </div>
-      </section>
-
-
-      <!-- Селект -->
-      <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
+        <h2 class="lib-block__title">Переключатели</h2>
         <h3 class="lib-block__paragraph">Пункт</h3>
         <p class="lib-block__name">.класс</p>
         <p class="lib-block__description">Описание</p>
@@ -543,8 +492,25 @@
 
       <!-- Кнопки -->
       <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
+        <h2 class="lib-block__title">Кнопки</h2>
         <h3 class="lib-block__paragraph">Пункт</h3>
+        <p class="lib-block__name">.класс</p>
+        <p class="lib-block__description">Описание</p>
+        <button class="lib-block__spoiler" type="button">Пример</button>
+
+        <!-- класс -->
+        <div class="lib-block__example  lib-block__example--closed">
+          <div class=".класс">
+
+          </div>
+        </div>
+      </section>
+
+
+      <!-- Другие элементы -->
+      <section class="lib-block">
+        <h2 class="lib-block__title">Другие элементы</h2>
+        <h3 class="lib-block__paragraph">Прогресс-бар</h3>
         <p class="lib-block__name">.класс</p>
         <p class="lib-block__description">Описание</p>
         <button class="lib-block__spoiler" type="button">Пример</button>
@@ -560,7 +526,7 @@
 
       <!-- Модальные окна -->
       <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
+        <h2 class="lib-block__title">Модальные окна</h2>
         <h3 class="lib-block__paragraph">Пункт</h3>
         <p class="lib-block__name">.класс</p>
         <p class="lib-block__description">Описание</p>
@@ -575,9 +541,9 @@
       </section>
 
 
-      <!-- Интерактивная карта -->
+      <!-- Интерактивные карты -->
       <section class="lib-block">
-        <h2 class="lib-block__title">Название</h2>
+        <h2 class="lib-block__title">Интерактивные карты</h2>
         <h3 class="lib-block__paragraph">Пункт</h3>
         <p class="lib-block__name">.класс</p>
         <p class="lib-block__description">Описание</p>
