Наложение слоя-изображения

--- a/index.html
+++ b/index.html
@@ -358,6 +358,18 @@
             <a href="#" class="social__btn  social__btn--youtube">Youtube</a>
           </div>
         </div>
+
+        <h3 class="lib-block__paragraph">Наложение слоя-изображения</h3>
+        <p class="lib-block__name">.layer</p>
+        <p class="lib-block__description">Меняем <code>z-index</code> только у псевдоэлемента: это может быть как минусовое, так и плюсовое значение.</p>
+        <button class="lib-block__spoiler" type="button">Пример</button>
+
+<!-- layer -->
+        <div class="lib-block__example  lib-block__example--closed">
+          <div class="layer">
+            24
+          </div>
+        </div>
       </section>
 
 
